Fix vertical lines in forum module not showing correctly, add loaded class to body to only show page after javascript has finished loading to prevent layout jump

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -7,6 +7,15 @@ html {
 
 body {
     margin: 0;
+
+    visibility: hidden;
+    background-color: black;
+}
+
+body.loaded {
+  visibility: visible;
+
+  background-color: #e3e3e3;
 }
 
 body::-webkit-scrollbar {
