--- a/client/src/components/Forum/PostCreate.scss
+++ b/client/src/components/Forum/PostCreate.scss
@@ -55,6 +55,7 @@ $mid-light: lighten(map-get($colors, lightest), 8%);
     background-color: map-get($colors, dark);
     color: white;
     cursor: pointer;
+    z-index: 2;
 }
 
 .post-create__back-icon:hover {
@@ -207,7 +208,7 @@ $mid-light: lighten(map-get($colors, lightest), 8%);
     width: 3.5rem;
     left: 0;
     top: 0;
-    z-index: -1;
+    z-index: 1;
     border-right: 3px solid map-get($colors, darkest);
 }
 
