--- a/client/src/components/Forum/PostShow.scss
+++ b/client/src/components/Forum/PostShow.scss
@@ -33,7 +33,7 @@ $light-white: lighten(map-get($colors, lightest), 8%);
     grid-row: 1/ -1;
     grid-column: 2/span 1;
     position: relative;
-    z-index: -1;
+    z-index: 1;
     width: calc(100% - 3px);
     height: 100%;
     min-height: 100vh;
